Using different type scheme for cloud events